--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-
-</head>
-
-<body>
-    <h1>Hello world</h1>
-
-    <p>안녕하세요 개발자 김광일의 github 사이트 입니다.</p>
-</body>
-
+    <body>
+        <p>안녕하세요</p>
+    </body>
 </html>
+<html>
